# traveling-video-creator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_cloudflare_image.py  testgemini.py
app/: __init__.py  main.py  mcp_server.py
app/api/routes/: chat.py
app/core/: config.py  logging.py
app/schemas/: chat.py
app/services/: agent.py  ffmpeg_render.py  intro_image.py  media_tools.py  progress.py  tts.py  video.py
frontend/: .env.example  Dockerfile  index.html  netlify.toml  ngnix.conf  vite.config.js
frontend/src/: App.css  App.jsx  index.css
